# gh-config-cli

./: .contreeignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build-release.yml  on-v-tag-release.yaml  update-org.yml  validate-org.yml
docs/: architecture.md  changelog.md  ci-examples.md  development.md  faq.md  gh-config-expansion-plan.md  pat-setup.md  usage.md
scripts/: generate_api_mapping.rs
src/: api_mapping.rs  api_mapping_generated.rs  config.rs  error.rs  github.rs  github_api_mapping_generated.rs  lib.rs  main.rs  ssh_keys.rs
tests/: api_mapping_tests.rs
