[package]
name = "gh-config-cli"
version = "0.2.2"
edition = "2021"

[[bin]]
name = "gh-config"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
env_logger = "0.11"
log = "0.4"
openssl-sys = { version = "0.9.106", features = ["vendored"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
similar = "2.6"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
