[package]
name = "gh-config-cli"
version = "0.3.8"
edition = "2021"
repository = "https://github.com/harmony-labs/contree-cli"
homepage = "https://github.com/harmony-labs/contree-cli"
documentation = "https://docs.rs/contree"
keywords = ["cli", "context", "ai", "rust", "project", "tool"]
authors = ["@mateodelnorte"]

[[bin]]
name = "gh-config"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
env_logger = "0.11"
log = "0.4"
openssl-sys = { version = "0.9.106", features = ["vendored"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
similar = "2.6"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.19.1"
