[package]
name = "gh-config"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/harmony-labs/gh-config-cli"
homepage = "https://github.com/harmony-labs/gh-config-cli"
documentation = "https://docs.rs/gh-config"
keywords = ["cli", "context", "ai", "rust", "project", "tool"]
authors = ["@mateodelnorte"]

[[bin]]
name = "gh-config"
path = "src/main.rs"

[[bin]]
name = "generate-api-mappings"
path = "scripts/generate_api_mapping.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive", "env"] }
colored = "3.0.0"
env_logger = "0.11.8"
log = "0.4"
openssl-sys = { version = "0.9.107", features = ["vendored"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
similar = "2.6"
thiserror = "1.0"
tokio = { version = "1.44.2", features = ["full"] }

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.19.1"
